plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.7'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'challengeMe'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '21'
targetCompatibility = '21'
description = 'backend'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Spring Boot Web
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// Spring Boot Security
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// Spring Data JPA
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	// Validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// H2 Database (in-memory, pentru testare)
	runtimeOnly 'com.h2database:h2'

	// Spring Boot DevTools (optional)
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	// Jakarta Validation API
	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'

	// Hibernate Validator (implementation)
	implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'

	// Expression Language dependency
	implementation 'org.glassfish:jakarta.el:4.0.2'

	// Lombok
	compileOnly 'org.projectlombok:lombok:1.18.30'
	annotationProcessor 'org.projectlombok:lombok:1.18.30'

	//Spring Boot validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	//Lombok
	implementation 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

}


tasks.named('test') {
	useJUnitPlatform()
}
